Fix(BlurBanner): Make sure it works on small devices

--- a/styles/components/BlurBanner.module.scss
+++ b/styles/components/BlurBanner.module.scss
@@ -7,8 +7,7 @@
     @apply flex flex-col;
 
     > div:first-child {
-      @apply w-full h-[40rem];
-      @apply relative;
+      @apply w-full h-[40rem] relative;
       img {
         @apply blur-sm object-cover;
       }
@@ -26,11 +25,9 @@
     }
 
     > div:nth-child(3) {
-      @apply absolute bottom-0 left-0 right-0;
-      @apply h-1/3;
+      @apply absolute bottom-0 left-0 right-0 h-1/3;
       @apply z-20;
       @apply translate-y-2;
-      @apply w-full;
 
       > div {
         @apply absolute bottom-4 left-8;
@@ -51,7 +48,7 @@
       }
 
       img {
-        @apply object-cover object-bottom;
+        @apply object-cover object-left-bottom;
       }
     }
   }
